# Kyoku-Bot

./: NOTE.md  README.md  pyproject.toml
kyokubot/: bot.py  start.py
kyokubot/core/: config.py
kyokubot/entity/: __init__.py  bot_user.py
kyokubot/sqls/: __init__.py  bot_database.py
kyokubot/utils/: gradient.py
